--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #loadGame {
-		   background-image: url("Load button.jpg")
+		   background-image: url("https://lvoz2.github.io/Orez/images/Load%20button.jpg")
 }
 #newGame  {
-		   background-image: url("Start button.jpg")
+		   background-image: url("https://lvoz2.github.io/Orez/images/Start%20button.jpg")
 }
